2008-11-03  Scott Ellington <scott.ellington@gmail.com> 

	* cumberland.sln, Cumberland.Data.SqlServer.Loader,
	  Cumberland.Data.SqlServer.Loader/AssemblyInfo.cs,
	  Cumberland.Data.SqlServer.Loader/lib,
	  Cumberland.Data.SqlServer.Loader/lib/NDesk,Options.COPYING,
	  Cumberland.Data.SqlServer.Loader/lib/NDesk.Options.dll,
	  Cumberland.Data.SqlServer.Loader/Main.cs,
	  Cumberland.Data.SqlServer.Loader/Cumberland.Data.SqlServer.Loader.csproj:
	  add sql server loader

2008-10-31  Scott Ellington <scott.ellington@gmail.com> 

	* Cumberland.DrawMap/Main.cs, Cumberland.InteractiveMap/Main.cs,
	  Cumberland.TileViewerTest/TileProvider.aspx.cs,
	  Cumberland.Data.PostGIS/PostGISFeatureSource.cs: rename providers
	  to sources

2008-10-30  Scott Ellington <scott.ellington@gmail.com> 

	* Cumberland.TileViewerTest/TileProvider.aspx.cs: clean up

2008-10-30  Scott Ellington <scott.ellington@gmail.com> 

	* Cumberland.DrawMap/Cumberland.DrawMap.csproj: add test map
	* Cumberland.TileViewerTest/Default.aspx.cs,
	  Cumberland.TileViewerTest/TileProvider.aspx.cs,
	  Cumberland.TileViewerTest/Default.aspx: switch to map file

2008-10-30  Scott Ellington <scott.ellington@gmail.com> 

	* Cumberland.Drawing.OpenGL/OpenGlMapDrawer.cs: need to use
	  GetFeatures()
	* Cumberland.Data.PostGIS/PostGISFeatureSource.cs: add GetFeatures()
	  overload

2008-10-30  Scott Ellington <scott.ellington@gmail.com> 

	* Cumberland.InteractiveMap/Cumberland.InteractiveMap.csproj,
	  Cumberland.InteractiveMap/lib/Tao.FreeGlut.dll,
	  Cumberland.InteractiveMap/lib/Tao.FreeGlut.dll.config,
	  Cumberland.InteractiveMap/lib/Tao.FreeGlut.xml,
	  Cumberland.Drawing.OpenGL/lib/Tao.FreeGlut.dll,
	  Cumberland.Drawing.OpenGL/lib/Tao.FreeGlut.dll.config,
	  Cumberland.Drawing.OpenGL/lib/Tao.FreeGlut.xml,
	  Cumberland.Drawing.OpenGL/Cumberland.Drawing.OpenGL.csproj,
	  Cumberland.Drawing.OpenGL/OpenGlMapDrawer.cs: move out freeglut

2008-10-30  Scott Ellington <scott.ellington@gmail.com> 
