@@ -1,0 +1,3 @@
+shp2sqlserver.exe - command line shapefile loader for sql server 2008
+
+http://www.salmonsalvo.net/blog/?p=105
